Special Card-related major update